Cambios de estilos

--- a/index.html
+++ b/index.html
@@ -10,136 +10,126 @@
   </head>
   <body>
     <div class="container">
-      <div class="main">
-        <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
+      <div class="box-shadow">
+        <div class="main">
+          <h1>Ignacio Heredia</h1>
+          <p class="role">Programador web</p>
+          <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
+        </div><hr>
+        <div class="section profile">
+          <h2>PERFIL</h2>
+          <p class="section-item-description">
+            Desarrollador web fullstack.
 
-        <h1>Ignacio Heredia</h1>
-        <p class="role">Programador web</p>
-        <p class="location">Buenos Aires, Argentina</p>
-        <p class="email">
-          <a href="mailto:ignacio.nh@gmail.com">ignacio.nh@gmail.com</a>
-        </p>
-      </div>
+            Programo en mi tiempo libre.
 
-      <hr>
+            Fundamentalista del código y el conocimiento abierto.
 
-      <div class="section work-exp">
-        <h2>PERFIL</h2>
-        <p class="section-item-description">
-          Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-          archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar
-          de las industrias desde el año 1500, cuando un impresor (N. del T.
-          persona que se dedica a la imprenta) desconocido usó una galería de
-          textos y los mezcló de tal manera que logró hacer un libro de textos
-          especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como
-          texto de relleno en documentos electrónicos, quedando esencialmente
-          igual al original. Fue popularizado en los 60s con la creación de
-          las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum,
-          y más recientemente con software de autoedición, como por ejemplo
-          Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
-        </p>
-      </div>
+            Curioso.
 
-      <hr>
+            Hoy es desarrollador fullstack en el equipo de Datos Argentina
+            (Ministerio de Modernización)
 
-      <div class="section work-exp">
-        <h2>EXPERIENCIA LABORAL</h2>
+            Ex estudiante de licenciatura en Ciencias Matemáticas en la
+            Facultad de Ciencias Exactas y Naturales, UBA.
+          </p>
+        </div><hr>
+        <div class="section info">
+          <h2>INFORMACIÓN PERSONAL</h2>
+            <p class="location">Buenos Aires, Argentina</p>
+            <p class="email">
+              <a href="mailto:ignacio.nh@gmail.com">ignacio.nh@gmail.com</a>
+            </p>
+        </div><hr>
+        <div class="section work-exp">
+          <h2>EXPERIENCIA LABORAL</h2>
 
-        <h3 class="section-item-title">
-          Dirección Nacional de Datos e Información Pública,
-          Minisiterio de Modernización
-        </h3>
-        <p class="section-item-subtitle">Desarrollador full stack</p>
-        <p class="section-item-description">
-          Implementación del portal de datos abiertos de la nación, el sistema
-          de registro de audiencias públicas y el portal de datos abiertos
-          Andino, entre otros.
-        </p>
-        <p class="section-item-ref">Desde Enero de 2016</p>
+          <h3 class="section-item-title">
+            Dirección Nacional de Datos e Información Pública,
+            Minisiterio de Modernización
+          </h3>
+          <p class="section-item-subtitle">Desarrollador full stack</p>
+          <p class="section-item-description">
+            Implementación del portal de datos abiertos de la nación, el sistema
+            de registro de audiencias públicas y el portal de datos abiertos
+            Andino, entre otros.
+          </p>
+          <p class="section-item-ref">Desde Enero de 2016</p>
 
-        <hr class="section-hr">
+          <hr class="section-hr">
 
-        <h3 class="section-item-title">
-          Dirección General de Innovación y Gobierno Abierto,
-          Ministerio de Modernización, GCBA
-        </h3>
-        <p class="section-item-subtitle">Desarrollador full stack</p>
-        <p class="section-item-description">
-          Implementación de APIs para integración de servicios de
-          infraestructura de la ciudad y monitoreo de sensores urbanos.
-        </p>
-        <p class="section-item-ref">Mayo de 2015 a Diciembre de 2015</p>
+          <h3 class="section-item-title">
+            Dirección General de Innovación y Gobierno Abierto,
+            Ministerio de Modernización, GCBA
+          </h3>
+          <p class="section-item-subtitle">Desarrollador full stack</p>
+          <p class="section-item-description">
+            Implementación de APIs para integración de servicios de
+            infraestructura de la ciudad y monitoreo de sensores urbanos.
+          </p>
+          <p class="section-item-ref">Mayo de 2015 a Diciembre de 2015</p>
 
-        <hr class="section-hr">
+          <hr class="section-hr">
 
-        <h3 class="section-item-title">
-          Aristas SRL
-        </h3>
-        <p class="section-item-subtitle">Desarrollador full stack</p>
-        <p class="section-item-description">
-          Diseño de producto y desarrollo de aplicación web. Implementación de
-          algoritmos y planificación de arquitectura.
-        </p>
-        <p class="section-item-ref">Abril de 2015 a Febrero de 2016</p>
+          <h3 class="section-item-title">
+            Aristas SRL
+          </h3>
+          <p class="section-item-subtitle">Desarrollador full stack</p>
+          <p class="section-item-description">
+            Diseño de producto y desarrollo de aplicación web. Implementación de
+            algoritmos y planificación de arquitectura.
+          </p>
+          <p class="section-item-ref">Abril de 2015 a Febrero de 2016</p>
 
-        <hr class="section-hr">
+          <hr class="section-hr">
 
-        <h3 class="section-item-title">
-          Devartis
-        </h3>
-        <p class="section-item-subtitle">Desarrollador full stack</p>
-        <p class="section-item-description">
-          Desarrollo y mantenimiento de aplicaciones web, motores de búsqueda y
-          herramientas de reportes de datos.
-        </p>
-        <p class="section-item-ref">Agosto de 2013 a Mayo de 2015</p>
+          <h3 class="section-item-title">
+            Devartis
+          </h3>
+          <p class="section-item-subtitle">Desarrollador full stack</p>
+          <p class="section-item-description">
+            Desarrollo y mantenimiento de aplicaciones web, motores de búsqueda y
+            herramientas de reportes de datos.
+          </p>
+          <p class="section-item-ref">Agosto de 2013 a Mayo de 2015</p>
 
-        <hr class="section-hr">
+          <hr class="section-hr">
 
-        <h3 class="section-item-title">
-          CBC UBA
-        </h3>
-        <p class="section-item-subtitle">Docente</p>
-        <p class="section-item-description">
-          Docente en la materia Matemática
-        </p>
-        <p class="section-item-ref">1er y 2do cuatrimestre de 2014</p>
+          <h3 class="section-item-title">
+            CBC UBA
+          </h3>
+          <p class="section-item-subtitle">Docente</p>
+          <p class="section-item-description">
+            Docente en la materia Matemática
+          </p>
+          <p class="section-item-ref">1er y 2do cuatrimestre de 2014</p>
 
-      </div>
+        </div><hr>
+        <div class="section education">
+          <h2>FORMACIÓN ACADEMICA</h2>
 
-      <hr>
+          <h3 class="section-item-title">
+            Facultad de Ciencias Exactas y Naturales, UBA
+          </h3>
+          <p class="section-item-subtitle">
+            Licenciatura en Ciencias Matemáticas,
+            orientación en Matemática Aplicada
+          </p>
+          <p class="section-item-ref">
+            60% de la carrera completa
+          </p>
+        </div><hr>
+        <div class="section languages">
+          <h2>IDIOMAS</h2>
 
-      <div class="section work-exp">
-        <h2>FORMACIÓN ACADEMICA</h2>
-
-        <h3 class="section-item-title">
-          Facultad de Ciencias Exactas y Naturales, UBA
-        </h3>
-        <p class="section-item-subtitle">
-          Licenciatura en Ciencias Matemáticas,
-          orientación en Matemática Aplicada
-        </p>
-        <p class="section-item-ref">
-          60% de la carrera completa
-        </p>
-      </div>
-
-      <hr>
-
-      <div class="section work-exp">
-        <h2>IDIOMAS</h2>
-
-        <h3 class="section-item-title">
-          Inglés
-        </h3>
-        <p class="section-item-subtitle">
-          Avanzado
-        </p>
-      </div>
-
-      <hr>
-
-      <div class="section work-exp">
+          <h3 class="section-item-title">
+            Inglés
+          </h3>
+          <p class="section-item-subtitle">
+            Avanzado
+          </p>
+        </div><hr>
+        <div class="section others">
         <h2>OTROS</h2>
 
         <p class="section-item-description">
@@ -183,7 +173,7 @@
         </p>
 
       </div>
-
+      </div>
     </div>
   </body>
 </html>
