--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" integrity="sha256-HxaKz5E/eBbvhGMNwhWRPrAR9i/lG1JeT4mD6hCQ7s4=" crossorigin="anonymous" />
+
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <div class="box-shadow">
         <div class="main">
+          <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
           <h1>Ignacio Heredia</h1>
           <p class="role">Programador web</p>
-          <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
         </div><hr>
         <div class="section profile">
           <h2>PERFIL</h2>
@@ -27,7 +28,7 @@
 
             Curioso.
 
-            Hoy es desarrollador fullstack en el equipo de Datos Argentina
+            Hoy desarrollador fullstack en el equipo de Datos Argentina
             (Ministerio de Modernización)
 
             Ex estudiante de licenciatura en Ciencias Matemáticas en la
@@ -36,8 +37,11 @@
         </div><hr>
         <div class="section info">
           <h2>INFORMACIÓN PERSONAL</h2>
-            <p class="location">Buenos Aires, Argentina</p>
-            <p class="email">
+            <p>Buenos Aires, Argentina</p>
+            <p>
+              <a href="mailto:ignacio.nh@gmail.com">ignacio.nh@gmail.com</a>
+            </p>
+            <p>
               <a href="mailto:ignacio.nh@gmail.com">ignacio.nh@gmail.com</a>
             </p>
         </div><hr>
