--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Ignacio Heredia</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" integrity="sha256-HxaKz5E/eBbvhGMNwhWRPrAR9i/lG1JeT4mD6hCQ7s4=" crossorigin="anonymous" />
 
     <link href="style.css" rel="stylesheet">
@@ -19,6 +19,7 @@
           <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
           <h1>Ignacio Heredia</h1>
           <p class="role">Programador web</p>
+          <p class="location">Buenos Aires, Argentina</p>
         </div><hr>
         <div class="section profile">
           <h2>PERFIL</h2>
@@ -40,13 +41,15 @@
         </div><hr>
         <div class="section info">
           <h2>INFORMACIÓN PERSONAL</h2>
-            <p>Buenos Aires, Argentina</p>
-            <p>
-              <a href="mailto:ignacio.nh@gmail.com">ignacio.nh@gmail.com</a>
-            </p>
-            <p>
-              <a href="mailto:ignacio.nh@gmail.com">ignacio.nh@gmail.com</a>
-            </p>
+          <p>
+            Telefono: 15-5828-7960
+          </p>
+          <p>
+            Email: <a href="mailto:ignacio.nh@gmail.com" target="_blank">ignacio.nh@gmail.com</a>
+          </p>
+          <p>
+            Fecha de nacimiento: 11 de Diciembre de 1990
+          </p>
         </div><hr>
         <div class="section work-exp">
           <h2>EXPERIENCIA LABORAL</h2>
@@ -147,36 +150,64 @@
         <hr class="section-hr">
 
         <p class="section-item-description">
-          Orador en Media Party 2016 y la edición 2016 del foro Argentina
-          Abierta, sobre el proceso de “Mejorando datos en origen” del sistema
-          de registro de audiencias de gestión.
+          Orador en
+          <a href="https://hackshackersbamediaparty2016.sched.com/event/058ddc4a35eb0d5c1e0bfe69de323447" target="_blank">
+            Media Party 2016
+          </a>
+          y la edición 2016 del
+          <a href="https://www.argentina.gob.ar/foroargentinaabierta" target="_blank">
+            foro Argentina Abierta,
+          </a>
+          sobre el proceso de
+          <a class="quoted-link" href="https://datosgobar.github.io/mejorando-datos-en-origen/#/" target="_blank">
+            “Mejorando datos en origen”
+          </a>
+          del sistema de registro de audiencias de gestión.
         </p>
 
         <hr class="section-hr">
 
         <p class="section-item-description">
-          Orador en la Conferencia Argentina de Python 2016, dando la charla
-          “NLP en el Congreso de la Nación” y el taller “Análisis de Datos 101”
+          Orador en la
+          <a href="http://ar.pycon.org/" target="_blank">
+            Conferencia Argentina de Python
+          </a>
+          2016, dando la charla
+          <a class="quoted-link" href="https://datosgobar.github.io/presentacion-nlp-congreso-nacion/#/" target="_blank">
+            “NLP en el Congreso de la Nación”
+          </a>
+          y el taller
+          <a class="quoted-link" href="https://github.com/datosgobar/taller-analisis-datos-101" target="_blank">
+            “Análisis de Datos 101”
+          </a>
         </p>
 
         <hr class="section-hr">
 
         <p class="section-item-description">
-          Orador en la 3er edición del meetup de Processing Buenos Aires,
-          dando la charla “Escenas del azar” sobre estrategias para generar
-          aleatoriedad controlada.
+          Orador en la 3er edición del meetup de
+          <a href="https://www.meetup.com/es/processingBuenosAires/" target="_blank">
+            Processing Buenos Aires,
+          </a>
+          dando la charla
+          <a class="quoted-link" href="https://github.com/iheredia/escenas-del-azar" target="_blank">
+            “Escenas del azar”
+          </a>
+          sobre estrategias para generar aleatoriedad controlada.
         </p>
 
         <hr class="section-hr">
 
         <p class="section-item-description">
-          Generador de árboles pitagóricos aleatorios.
-        </p>
-
-        <hr class="section-hr">
-
-        <p class="section-item-description">
-          Versión alternativa del juego snake.
+          Proyectos personales de interés:
+          <br>
+          <a href="http://iheredia.github.io/trees/" target="_blank">
+            Generador de árboles pitagóricos aleatorios.
+          </a>
+          <br>
+          <a href="http://iheredia.github.io/snakes/" target="_blank">
+            Versión alternativa del juego snake.
+          </a>
         </p>
 
       </div>
