--- a/index.html
+++ b/index.html
@@ -24,19 +24,15 @@
         <div class="section profile">
           <h2>PERFIL</h2>
           <p class="section-item-description">
-            Desarrollador web fullstack.
-
-            Programo en mi tiempo libre.
-
-            Fundamentalista del código y el conocimiento abierto.
-
-            Curioso.
-
-            Hoy desarrollador fullstack en el equipo de Datos Argentina
-            (Ministerio de Modernización)
+            Desarrollador web fullstack, de esos que programan en su
+            tiempo libre.
 
             Ex estudiante de licenciatura en Ciencias Matemáticas en la
             Facultad de Ciencias Exactas y Naturales, UBA.
+
+            Fundamentalista del código abierto, curioso y amante de la música.
+
+            Hoy es desarrollador en el equipo de Datos Argentina.
           </p>
         </div><hr>
         <div class="section info">
@@ -60,9 +56,19 @@
           </h3>
           <p class="section-item-subtitle">Desarrollador full stack</p>
           <p class="section-item-description">
-            Implementación del portal de datos abiertos de la nación, el sistema
-            de registro de audiencias públicas y el portal de datos abiertos
-            Andino, entre otros.
+            Implementación del
+            <a href="http://datos.gob.ar/" target="_blank">
+              portal de datos abiertos de la nación
+            </a>
+            , el
+            <a href="https://audiencias.mininterior.gob.ar/" target="_blank">
+              sistema de registro de audiencias públicas
+            </a>
+            y el
+            <a href="https://github.com/datosgobar/portal-andino" target="_blank">
+              portal de datos abiertos Andino
+            </a>
+            , entre otros.
           </p>
           <p class="section-item-ref">Desde Enero de 2016</p>
 
@@ -140,80 +146,79 @@
           </p>
         </div><hr>
         <div class="section others">
-        <h2>OTROS</h2>
+          <h2>OTROS</h2>
 
-        <p class="section-item-description">
-          Participante en el Torneo Argentino de Programación edición 2013 -
-          puesto 12 del país - y edición 2014 - puesto 13.
-        </p>
+          <p class="section-item-description">
+            Participante en el Torneo Argentino de Programación edición 2013 -
+            puesto 12 del país - y edición 2014 - puesto 13.
+          </p>
 
-        <hr class="section-hr">
+          <hr class="section-hr">
 
-        <p class="section-item-description">
-          Orador en
-          <a href="https://hackshackersbamediaparty2016.sched.com/event/058ddc4a35eb0d5c1e0bfe69de323447" target="_blank">
-            Media Party 2016
-          </a>
-          y la edición 2016 del
-          <a href="https://www.argentina.gob.ar/foroargentinaabierta" target="_blank">
-            foro Argentina Abierta,
-          </a>
-          sobre el proceso de
-          <a class="quoted-link" href="https://datosgobar.github.io/mejorando-datos-en-origen/#/" target="_blank">
-            “Mejorando datos en origen”
-          </a>
-          del sistema de registro de audiencias de gestión.
-        </p>
+          <p class="section-item-description">
+            Orador en
+            <a href="https://hackshackersbamediaparty2016.sched.com/event/058ddc4a35eb0d5c1e0bfe69de323447" target="_blank">
+              Media Party 2016
+            </a>
+            y la edición 2016 del
+            <a href="https://www.argentina.gob.ar/foroargentinaabierta" target="_blank">
+              foro Argentina Abierta,
+            </a>
+            sobre el proceso de
+            <a class="quoted-link" href="https://datosgobar.github.io/mejorando-datos-en-origen/#/" target="_blank">
+              “Mejorando datos en origen”
+            </a>
+            del sistema de registro de audiencias de gestión.
+          </p>
 
-        <hr class="section-hr">
+          <hr class="section-hr">
 
-        <p class="section-item-description">
-          Orador en la
-          <a href="http://ar.pycon.org/" target="_blank">
-            Conferencia Argentina de Python
-          </a>
-          2016, dando la charla
-          <a class="quoted-link" href="https://datosgobar.github.io/presentacion-nlp-congreso-nacion/#/" target="_blank">
-            “NLP en el Congreso de la Nación”
-          </a>
-          y el taller
-          <a class="quoted-link" href="https://github.com/datosgobar/taller-analisis-datos-101" target="_blank">
-            “Análisis de Datos 101”
-          </a>
-        </p>
+          <p class="section-item-description">
+            Orador en la
+            <a href="http://ar.pycon.org/" target="_blank">
+              Conferencia Argentina de Python
+            </a>
+            2016, dando la charla
+            <a class="quoted-link" href="https://datosgobar.github.io/presentacion-nlp-congreso-nacion/#/" target="_blank">
+              “NLP en el Congreso de la Nación”
+            </a>
+            y el taller
+            <a class="quoted-link" href="https://github.com/datosgobar/taller-analisis-datos-101" target="_blank">
+              “Análisis de Datos 101”
+            </a>
+          </p>
 
-        <hr class="section-hr">
+          <hr class="section-hr">
 
-        <p class="section-item-description">
-          Orador en la 3er edición del meetup de
-          <a href="https://www.meetup.com/es/processingBuenosAires/" target="_blank">
-            Processing Buenos Aires,
-          </a>
-          dando la charla
-          <a class="quoted-link" href="https://github.com/iheredia/escenas-del-azar" target="_blank">
-            “Escenas del azar”
-          </a>
-          sobre estrategias para generar aleatoriedad controlada.
-        </p>
+          <p class="section-item-description">
+            Orador en la 3er edición del meetup de
+            <a href="https://www.meetup.com/es/processingBuenosAires/" target="_blank">
+              Processing Buenos Aires,
+            </a>
+            dando la charla
+            <a class="quoted-link" href="https://github.com/iheredia/escenas-del-azar" target="_blank">
+              “Escenas del azar”
+            </a>
+            sobre estrategias para generar aleatoriedad controlada.
+          </p>
 
-        <hr class="section-hr">
+          <hr class="section-hr">
 
-        <p class="section-item-description">
-          Proyectos personales de interés:
-          <br>
-          <a href="http://iheredia.github.io/trees/" target="_blank">
-            Generador de árboles pitagóricos aleatorios.
-          </a>
-          <br>
-          <a href="http://iheredia.github.io/snakes/" target="_blank">
-            Versión alternativa del juego snake.
-          </a>
-        </p>
+          <p class="section-item-description">
+            Proyectos personales de interés:
+            <br>
+            <a href="http://iheredia.github.io/trees/" target="_blank">
+              Generador de árboles pitagóricos aleatorios.
+            </a>
+            <br>
+            <a href="http://iheredia.github.io/snakes/" target="_blank">
+              Versión alternativa del juego snake.
+            </a>
+          </p>
 
-      </div>
+        </div>
       </div>
     </div>
-
     <script>
       window.mobilecheck = function() {
         var check = false;
