Rediseño + migracion a sass

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ignacio Heredia</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" integrity="sha256-HxaKz5E/eBbvhGMNwhWRPrAR9i/lG1JeT4mD6hCQ7s4=" crossorigin="anonymous" />
 
     <link href="style.css" rel="stylesheet">
@@ -23,212 +24,217 @@
     </script>
   </head>
   <body class="desktop">
-    <div class="container">
-      <div class="box-shadow">
-        <div class="main">
-          <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
-          <h1>Ignacio Heredia</h1>
-          <p class="role">Programador web</p>
-          <p class="location">Buenos Aires, Argentina</p>
-        </div><hr>
-        <div class="section profile">
-          <h2>PERFIL</h2>
-          <p class="section-item-description">
-            Desarrollador web fullstack, de esos que programan en su
-            tiempo libre.
+    <article class="container">
+      <section class="main">
+        <img src="https://avatars0.githubusercontent.com/u/4714590?v=4&s=460">
+        <h1>Ignacio Heredia</h1>
+        <p>Programador web</p>
+        <p>Buenos Aires, Argentina</p>
+      </section>
+      <section class="profile">
+        <h2>PERFIL</h2>
+        <p>
+          Desarrollador web fullstack, de esos que programan en su
+          tiempo libre.
 
-            Ex estudiante de licenciatura en Ciencias Matemáticas en la
-            Facultad de Ciencias Exactas y Naturales, UBA.
+          Ex estudiante de licenciatura en Ciencias Matemáticas en la
+          Facultad de Ciencias Exactas y Naturales, UBA.
 
-            Fundamentalista del código abierto, curioso y amante de la música.
+          Fundamentalista del código abierto, curioso y amante de la música.
 
-            Hoy es desarrollador en el equipo de Datos Argentina.
-          </p>
-        </div><hr>
-        <div class="section info">
-          <h2>INFORMACIÓN PERSONAL</h2>
-          <p>
-            Telefono: 15-5828-7960
-          </p>
-          <p>
-            Email: <a href="mailto:ignacio.nh@gmail.com" target="_blank">ignacio.nh@gmail.com</a>
-          </p>
-          <p>
-            Fecha de nacimiento: 11 de Diciembre de 1990
-          </p>
-        </div><hr>
-        <div class="section work-exp">
-          <h2>EXPERIENCIA LABORAL</h2>
+          Hoy es desarrollador en el equipo de Datos Argentina.
+        </p>
+      </section>
+      <section class="info">
+        <h2>INFORMACIÓN PERSONAL</h2>
+        <p>
+          Telefono: 15-5828-7960
+        </p>
+        <p>
+          Email: <a href="mailto:ignacio.nh@gmail.com" target="_blank">ignacio.nh@gmail.com</a>
+        </p>
+        <p>
+          Fecha de nacimiento: 11 de Diciembre de 1990
+        </p>
+      </section>
+      <section class="work-exp">
+        <h2>EXPERIENCIA LABORAL</h2>
 
-          <h3 class="section-item-title">
-            Dirección Nacional de Datos e Información Pública,
-            Minisiterio de Modernización
-          </h3>
-          <p class="section-item-subtitle">Desarrollador full stack</p>
-          <p class="section-item-description">
-            Implementación del
-            <a href="http://datos.gob.ar/" target="_blank">
-              portal de datos abiertos de la nación
-            </a>
-            , el
-            <a href="https://audiencias.mininterior.gob.ar/" target="_blank">
-              sistema de registro de audiencias públicas
-            </a>
-            y el
-            <a href="https://github.com/datosgobar/portal-andino" target="_blank">
-              portal de datos abiertos Andino
-            </a>
-            , entre otros.
-          </p>
-          <p class="section-item-ref">Desde Enero de 2016</p>
+        <ol>
+          <li>
+            <h3>
+              Dirección Nacional de Datos e Información Pública,
+              Minisiterio de Modernización
+            </h3>
+            <p>Desarrollador full stack</p>
+            <p>
+              Implementación del
+              <a href="http://datos.gob.ar/" target="_blank">
+                portal de datos abiertos de la nación
+              </a>
+              , el
+              <a href="https://audiencias.mininterior.gob.ar/" target="_blank">
+                sistema de registro de audiencias públicas
+              </a>
+              y el
+              <a href="https://github.com/datosgobar/portal-andino" target="_blank">
+                portal de datos abiertos Andino
+              </a>
+              , entre otros.
+            </p>
+            <p class="item-ref">Desde Enero de 2016</p>
+          </li>
 
-          <hr class="section-hr">
+          <li>
+            <h3>
+              Dirección General de Innovación y Gobierno Abierto,
+              Ministerio de Modernización, GCBA
+            </h3>
+            <p>Desarrollador full stack</p>
+            <p>
+              Implementación de APIs para integración de servicios de
+              infraestructura de la ciudad y monitoreo de sensores urbanos.
+            </p>
+            <p class="item-ref">Mayo de 2015 a Diciembre de 2015</p>
+          </li>
 
-          <h3 class="section-item-title">
-            Dirección General de Innovación y Gobierno Abierto,
-            Ministerio de Modernización, GCBA
-          </h3>
-          <p class="section-item-subtitle">Desarrollador full stack</p>
-          <p class="section-item-description">
-            Implementación de APIs para integración de servicios de
-            infraestructura de la ciudad y monitoreo de sensores urbanos.
-          </p>
-          <p class="section-item-ref">Mayo de 2015 a Diciembre de 2015</p>
+          <li>
+            <h3>
+              Aristas SRL
+            </h3>
+            <p>Desarrollador full stack</p>
+            <p>
+              Diseño de producto y desarrollo de aplicación web. Implementación de
+              algoritmos y planificación de arquitectura.
+            </p>
+            <p class="item-ref">Abril de 2015 a Febrero de 2016</p>
+          </li>
 
-          <hr class="section-hr">
+          <li>
+            <h3>
+              Devartis
+            </h3>
+            <p>Desarrollador full stack</p>
+            <p>
+              Desarrollo y mantenimiento de aplicaciones web, motores de búsqueda y
+              herramientas de reportes de datos.
+            </p>
+            <p class="item-ref">Agosto de 2013 a Mayo de 2015</p>
+          </li>
 
-          <h3 class="section-item-title">
-            Aristas SRL
-          </h3>
-          <p class="section-item-subtitle">Desarrollador full stack</p>
-          <p class="section-item-description">
-            Diseño de producto y desarrollo de aplicación web. Implementación de
-            algoritmos y planificación de arquitectura.
-          </p>
-          <p class="section-item-ref">Abril de 2015 a Febrero de 2016</p>
+          <li>
+            <h3>
+              CBC UBA
+            </h3>
+            <p>Docente</p>
+            <p>
+              Docente en la materia Matemática
+            </p>
+            <p class="item-ref">1er y 2do cuatrimestre de 2014</p>
+          </li>
+        </ol>
 
-          <hr class="section-hr">
+      </section>
+      <section class="education">
+        <h2>FORMACIÓN ACADEMICA</h2>
 
-          <h3 class="section-item-title">
-            Devartis
-          </h3>
-          <p class="section-item-subtitle">Desarrollador full stack</p>
-          <p class="section-item-description">
-            Desarrollo y mantenimiento de aplicaciones web, motores de búsqueda y
-            herramientas de reportes de datos.
-          </p>
-          <p class="section-item-ref">Agosto de 2013 a Mayo de 2015</p>
+        <h3>
+          Facultad de Ciencias Exactas y Naturales, UBA
+        </h3>
+        <p>
+          Licenciatura en Ciencias Matemáticas,
+          orientación en Matemática Aplicada
+        </p>
+        <p class="item-ref">
+          60% de la carrera completa
+        </p>
+      </section>
+      <section class="languages">
+        <h2>IDIOMAS</h2>
 
-          <hr class="section-hr">
+        <h3>
+          Inglés
+        </h3>
+        <p>
+          Avanzado
+        </p>
+      </section>
+      <section class="others">
+        <h2>OTROS</h2>
 
-          <h3 class="section-item-title">
-            CBC UBA
-          </h3>
-          <p class="section-item-subtitle">Docente</p>
-          <p class="section-item-description">
-            Docente en la materia Matemática
-          </p>
-          <p class="section-item-ref">1er y 2do cuatrimestre de 2014</p>
+        <ol>
+          <li>
+            <p>
+              Participante en el Torneo Argentino de Programación edición 2013 -
+              puesto 12 del país - y edición 2014 - puesto 13.
+            </p>
+          </li>
 
-        </div><hr>
-        <div class="section education">
-          <h2>FORMACIÓN ACADEMICA</h2>
+          <li>
+            <p>
+              Orador en
+              <a href="https://hackshackersbamediaparty2016.sched.com/event/058ddc4a35eb0d5c1e0bfe69de323447" target="_blank">
+                Media Party 2016
+              </a>
+              y la edición 2016 del
+              <a href="https://www.argentina.gob.ar/foroargentinaabierta" target="_blank">
+                foro Argentina Abierta,
+              </a>
+              sobre el proceso de
+              <a class="quoted-link" href="https://datosgobar.github.io/mejorando-datos-en-origen/#/" target="_blank">
+                “Mejorando datos en origen”
+              </a>
+              del sistema de registro de audiencias de gestión.
+            </p>
+          </li>
 
-          <h3 class="section-item-title">
-            Facultad de Ciencias Exactas y Naturales, UBA
-          </h3>
-          <p class="section-item-subtitle">
-            Licenciatura en Ciencias Matemáticas,
-            orientación en Matemática Aplicada
-          </p>
-          <p class="section-item-ref">
-            60% de la carrera completa
-          </p>
-        </div><hr>
-        <div class="section languages">
-          <h2>IDIOMAS</h2>
+          <li>
+            <p>
+              Orador en la
+              <a href="http://ar.pycon.org/" target="_blank">
+                Conferencia Argentina de Python
+              </a>
+              2016, dando la charla
+              <a class="quoted-link" href="https://datosgobar.github.io/presentacion-nlp-congreso-nacion/#/" target="_blank">
+                “NLP en el Congreso de la Nación”
+              </a>
+              y el taller
+              <a class="quoted-link" href="https://github.com/datosgobar/taller-analisis-datos-101" target="_blank">
+                “Análisis de Datos 101”
+              </a>
+            </p>
+          </li>
 
-          <h3 class="section-item-title">
-            Inglés
-          </h3>
-          <p class="section-item-subtitle">
-            Avanzado
-          </p>
-        </div><hr>
-        <div class="section others">
-          <h2>OTROS</h2>
+          <li>
+            <p>
+              Orador en la 3er edición del meetup de
+              <a href="https://www.meetup.com/es/processingBuenosAires/" target="_blank">
+                Processing Buenos Aires,
+              </a>
+              dando la charla
+              <a class="quoted-link" href="https://github.com/iheredia/escenas-del-azar" target="_blank">
+                “Escenas del azar”
+              </a>
+              sobre estrategias para generar aleatoriedad controlada.
+            </p>
+          </li>
 
-          <p class="section-item-description">
-            Participante en el Torneo Argentino de Programación edición 2013 -
-            puesto 12 del país - y edición 2014 - puesto 13.
-          </p>
-
-          <hr class="section-hr">
-
-          <p class="section-item-description">
-            Orador en
-            <a href="https://hackshackersbamediaparty2016.sched.com/event/058ddc4a35eb0d5c1e0bfe69de323447" target="_blank">
-              Media Party 2016
-            </a>
-            y la edición 2016 del
-            <a href="https://www.argentina.gob.ar/foroargentinaabierta" target="_blank">
-              foro Argentina Abierta,
-            </a>
-            sobre el proceso de
-            <a class="quoted-link" href="https://datosgobar.github.io/mejorando-datos-en-origen/#/" target="_blank">
-              “Mejorando datos en origen”
-            </a>
-            del sistema de registro de audiencias de gestión.
-          </p>
-
-          <hr class="section-hr">
-
-          <p class="section-item-description">
-            Orador en la
-            <a href="http://ar.pycon.org/" target="_blank">
-              Conferencia Argentina de Python
-            </a>
-            2016, dando la charla
-            <a class="quoted-link" href="https://datosgobar.github.io/presentacion-nlp-congreso-nacion/#/" target="_blank">
-              “NLP en el Congreso de la Nación”
-            </a>
-            y el taller
-            <a class="quoted-link" href="https://github.com/datosgobar/taller-analisis-datos-101" target="_blank">
-              “Análisis de Datos 101”
-            </a>
-          </p>
-
-          <hr class="section-hr">
-
-          <p class="section-item-description">
-            Orador en la 3er edición del meetup de
-            <a href="https://www.meetup.com/es/processingBuenosAires/" target="_blank">
-              Processing Buenos Aires,
-            </a>
-            dando la charla
-            <a class="quoted-link" href="https://github.com/iheredia/escenas-del-azar" target="_blank">
-              “Escenas del azar”
-            </a>
-            sobre estrategias para generar aleatoriedad controlada.
-          </p>
-
-          <hr class="section-hr">
-
-          <p class="section-item-description">
-            Proyectos personales de interés:
-            <br>
-            <a href="http://iheredia.github.io/trees/" target="_blank">
-              Generador de árboles pitagóricos aleatorios.
-            </a>
-            <br>
-            <a href="http://iheredia.github.io/snakes/" target="_blank">
-              Versión alternativa del juego snake.
-            </a>
-          </p>
-
-        </div>
-      </div>
-    </div>
+          <li>
+            <p>
+              Proyectos personales de interés:
+              <br>
+              <a href="http://iheredia.github.io/trees/" target="_blank">
+                Generador de árboles pitagóricos aleatorios.
+              </a>
+              <br>
+              <a href="http://iheredia.github.io/snakes/" target="_blank">
+                Versión alternativa del juego snake.
+              </a>
+            </p>
+          </li>
+        </ol>
+        </section>
+    </article>
     <script>
       window.mobilecheck = function() {
         var check = false;
